# DyALA

./: .gitignore  DyALA.inc  DyALA.sln  DyALAEXTREW.inc  DyALAManualStateClassifier.inc  DyALAModelFree.inc  DyALAREWBayes.inc  DyALAREWBayesBlocker.inc  DyALAStateClassifier.cd.inc  DyALAStateClassifier.inc  DyALATargetStateClassifier.inc  ProcessWorldDynamicsSNN.py  README.md  WorldDynamics.inc  WorldDynamicsModel1Inference.drawio  WorldDynamicsModelinference.drawio  dy.pptx
Experiments/: 1.nnc  20000.nnc  4.nnc  BayesREW.nnp  ChaoticOriginalLearning.nnp  ExtSNNREW.nnp  ManualStateClassification.nnp  TargetStateClassification.nnp  WorldDynamics.nnp  model-free.nnp
Workplace/: Draw_ThermomapErr_x_vx.py
aux-studies/valdif_test/: valdif_test.py  valdif_test.pyproj
ping-pong/: CMakeLists.txt  RFPrediction.py  RFWorldDynamicModelCreation.py  ReadStateChanges.py  RunWorldModelTest.py  ShowWeights.py  TemporalStates.py  WorldDynamics.inf.py  cnvtoCompleteState.py  state_labels.py  theor_max.py
ping-pong/Results/: Results.py  Results.pyproj
ping-pong/WorldModelTest/: CMakeLists.txt  WorldModelTest.def  WorldModelTest.hpp  WorldModelTest.vcxproj  WorldModelTest.vcxproj.filters  WorldModelTestRea.cpp  WorldModelTestRec.cpp
ping-pong/blocker/: blocker.py  blocker.pyproj
ping-pong/environment/: AdaptiveSpikeSource.cpp  AdaptiveSpikeSource.hpp  CMakeLists.txt  ClusterBayes.cpp  ClusterBayes.hpp  EnvironmentState.cpp  EnvironmentState.hpp  UpdateWorld.cpp  ping-pong-environment-rea.cpp  ping-pong-environment-rec.cpp  ping-pong-environment-ver.cpp  ping-pong-environment.cpp  ping-pong-environment.def  ping-pong-environment.h  ping-pong-environment.vcxproj  ping-pong-environment.vcxproj.filters
ping-pong/log/: log.py  log.pyproj
ping-pong/manual_success/: manual_success.py  manual_success.pyproj
ping-pong/ping-pong-visualizer/: CMakeLists.txt  ping-pong-visualizer.cpp  ping-pong-visualizer.vcxproj  ping-pong-visualizer.vcxproj.filters
ping-pong/special/: special.py  special.pyproj
